--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.2",
     "babel-jest": "^27.5.1",
+    "eslint": "^8.9.0",
+    "eslint-plugin-react": "^7.28.0",
     "jest": "^27.5.1",
     "postcss": "^8.4.6",
     "react-test-renderer": "^17.0.2",
