--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "clsx": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@honkhonk/vite-plugin-svgr": "^1.1.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.2",
     "babel-jest": "^27.5.1",
